--- a/biblioteca_digital/libros/templates/libros/gestionar_prestamos.html
+++ b/biblioteca_digital/libros/templates/libros/gestionar_prestamos.html
@@ -35,7 +35,7 @@
         }
         
         h1, h2 {
-            color: #333;
+            color: #fff;
         }
         
         .messages {
