--- a/materiales/templates/materiales/formularios_altas/confirmacion_alta_material.html
+++ b/materiales/templates/materiales/formularios_altas/confirmacion_alta_material.html
@@ -332,7 +332,7 @@ function confirmarLibro() {
 function cancelarModal() {
     console.log('🔴 Cancelando...');
     // Redirigir de vuelta al formulario
-    window.location.href = '{% url "formulario_libro" %}';
+    window.location.href = '{% url "alta_materiales" %}';
 }
 
 // Manejar cuando se cierra el modal con X
