--- a/materiales/static/css/baseb.css
+++ b/materiales/static/css/baseb.css
@@ -1,16 +1,16 @@
 :root {
     --navbar-height: 60px; /* Ajusta a la altura real del navbar */
     --footer-height: 60px; /* Ajusta a la altura real del footer */
+    --header-height: 120px; /* Altura del header */
 }
 
 .layout-container {
     display: grid;
     height: 100vh; /* Altura total de la ventana */
-    grid-template-rows: auto auto 1fr auto;
+    grid-template-rows: auto 1fr auto;
     grid-template-columns: 1fr; /* Asegura que todos los elementos ocupen todo el ancho */
     grid-template-areas: 
         "navbar"
-        "header"
         "content"
         "footer";
     gap: 0px; /* Espacio entre áreas del grid */
