--- a/materiales/templates/components/navbar.html
+++ b/materiales/templates/components/navbar.html
@@ -8,7 +8,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="fondo container-fluid d-flex align-items-center">
             <img class="icon me-2">
             <a class="navbar-brand ms-2 text-navbar" href="#" style="font-size: 0.9rem;">Instituto Superior de Formación <br> Tecnica y Docente N° 210</a>
