--- a/materiales/templates/materiales/formularios_altas/formulario_programa.html
+++ b/materiales/templates/materiales/formularios_altas/formulario_programa.html
@@ -1,5 +1,6 @@
 {% extends 'components/baseb.html' %}
 {% load static %}
+{% block navbar %}{% endblock %}
 {% block extra_styles %}
     <link rel="stylesheet" href="{% static 'css/manual_modal.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
